--- a/style.css
+++ b/style.css
@@ -49,3 +49,60 @@ header
 	height: auto;
 	float: left;
 }
+
+
+.row
+{
+	max-width: 1200px;
+	margin: auto;
+}
+
+.king
+{
+	position: absolute;
+	width: 1200px;
+	margin-left: 0px;
+	margin-top: 0px;
+}
+
+h1
+{
+	color: white;
+	text-transform: uppercase;
+	font-size: 70px;
+	text-align: center; 
+	margin-top: 275px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
