--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ header
 
 .main-nav li a
 {
-	color: white;
+	color: #552583;
 	text-decoration: none;
 	padding: 5px 20px;
 	font-family: "Roboto", sans-serif;
