The change to the color of yellow (#FDB927) turned out to be a great decision as the gold does stand out in comparison to the darker gray/black.

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ header
 
 .main-nav li a
 {
-	color: #552583;
+	color: #FDB927;
 	text-decoration: none;
 	padding: 5px 20px;
 	font-family: "Roboto", sans-serif;
