--- a/style.css
+++ b/style.css
@@ -12,37 +12,6 @@ header
 	background-position: center;
 }
 
-.main-nav
-{
-	float: right;
-	list-style: none;
-	margin-top: 30px;
-}
-
-.main-nav li
-{
-	display: inline-block;
-}
-
-.main-nav li a
-{
-	color: #FDB927;
-	text-decoration: none;
-	padding: 5px 20px;
-	font-family: "Roboto", sans-serif;
-	font-size: 15px;
-}
-
-.main-nav li.active a 
-{
-	border: 1px solid white;
-}
-
-.main-nav li.active a:hover
-{
-	border: 1px solid white;
-}
-
 .logo img
 {
 	width: 150px;
@@ -51,13 +20,13 @@ header
 }
 
 
-.row
+.block-1
 {
 	max-width: 1200px;
 	margin: auto;
 }
 
-.king
+.block-2
 {
 	position: absolute;
 	width: 1200px;
@@ -74,7 +43,16 @@ h1
 	margin-top: 275px;
 }
 
+.block-3
+{
 
+}
+
+.lbjphoto
+{
+	margin: auto;
+	width: 200px;
+}
 
 
 
