--- a/style.css
+++ b/style.css
@@ -1,90 +1,34 @@
-*
-{
-    margin: 0;
-    padding: 0;
-    border: 0;
-    outline: 0;
-   
-}
-
-body
-{
+body {
 	background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(backdrop.jpg);
 	height: 100vh;
 	background-size: cover;
 	background-position: center;
 }
 
-.logo img
-{
-	width: 150px;
-	height: auto;
-	float: left;
-}
-
-
-.block-1
-{
-	position: absolute;
-	max-width: 1200px;
-	margin: auto;
-}
-
-.block-2
-{
-	position: relative;
-	width: 1200px;
-	margin-left: 0px;
-	margin-top: 0px;
-}
-
-h1
-{
+h1 {
 	color: white;
-	text-transform: uppercase;
-	font-size: 70px;
-	text-align: center; 
-	margin-top: 275px;
+	text-align: center;
+	font-family: Permanent Marker;
+	font-size: 80px;
 }
 
-.block-3
-{
-	position: relative;
+.image {
+    max-width: 100%;
+    height: auto;
+    border: 5px solid white;
+    text-align: center;
+    opacity: 0.8;
 }
 
-.lbjphoto
-{
-	margin: auto;
-	width: 200px;
+#photo {
+    width: 80%;
+    height: auto;
+    border: 5px solid blue;
+    position: relative;
+    mix-blend-mode: screen;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+img.half_fade {
+   top:0;left:0;
+   z-index:-1000;
+}
